--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "server": "json-server data/cities.json"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "json-server": "^1.0.0-alpha.23",
     "leaflet": "^1.9.4",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
